policies/templates/k8srestrictautomountserviceaccounttokens.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Restricts the use of service accounts tokens.
    metadata.gatekeeper.sh/title: Restrict Service Account Tokens
    metadata.gatekeeper.sh/version: 1.0.1
  labels:
  name: k8srestrictautomountserviceaccounttokens
spec:
  crd:
    spec:
      names:
        kind: K8sRestrictAutomountServiceAccountTokens
      validation:
        legacySchema: false
  targets:
  - rego: |
      package k8srestrictautomountserviceaccounttokens

      violation[{"msg": msg}] {
        input.review.kind.kind == "ServiceAccount"
        object.get(input.review.object, "automountServiceAccountToken", null) == true
        msg := "automountServiceAccountToken cannot be true"
      }

      violation[{"msg": msg}] {
        input.review.kind.kind == "Pod"
        object.get(object.get(input.review.object, "spec", {}), "automountServiceAccountToken", null) == true
        msg := "automountServiceAccountToken cannot be true"
      }
    target: admission.k8s.gatekeeper.sh
